# taidan

./: .gitmodules  Cargo.toml  HACKING.md  README.md  clippy.toml
.github/workflows/: rpmbuild.yml  rust.yml
catalogue/: administration.yml  art.yml  browser.yml  development.yml  gaming.yml  making.yml  mediaprod.yml  office.yml  photography-art.yml  photography.yml  productivity.yml  school.yml
data/: icons.gresource.xml  start-taidan  style.css
data/labwc/: autostart  rc.xml
data/pam.d/: README.md
data/polkit-1/rules.d/: 100-taidan.rules
data/systemd/: 95-taidan.preset  taidan-initial-setup-reconfiguration.service  taidan-initial-setup.service
data/sysusers.d/: taidan.conf
data/tweaks/cachyos-kernel/: up
data/tweaks/flatpakening/: up
data/tweaks/mtu-probing/: up
data/window-manager/: COPYING  README.md  install.sh  org.gnome.desktop.wm.keybindings.gschema.override
libtaidan/: Cargo.toml  cfg.rs  dnf.rs  err.rs  flatpak.rs  i18n.rs  lib.rs  prelude.rs  settings.rs  steps.rs  tweaks.rs
libtaidan/steps/: _00_useradd.rs  _01_settheme.rs  _02_dnfdownloadupdate.rs  _03_dnfinstallupdate.rs  _04_script.rs  _05_dnfdownloadapps.rs  _06_dnfinstallapps.rs  _07_drivers_codecs.rs  _08_setup_imf.rs
po/: cs.po  es.po  ja.po  taidan.pot  th.po  vi.po  zh_Hans.po  zh_Hant.po
po/cs/: taidan.ftl
po/en-US/: taidan.ftl
po/es/: taidan.ftl
po/fi/: taidan.ftl
po/fr/: taidan.ftl
po/hi/: taidan.ftl
po/ja/: taidan.ftl
po/ka/: taidan.ftl
po/pl/: taidan.ftl
po/sv/: taidan.ftl
po/th/: taidan.ftl
po/tok/: taidan.ftl
po/vi/: taidan.ftl
po/yue-Hant/: taidan.ftl
po/zh-Hans/: taidan.ftl
po/zh-Hant/: taidan.ftl
scripts/: detect-internet  install.sh  move_pages.sh  oobe.sh  taidan.spec  updpo.sh
scripts/libexec/: README.md  firstboot-windowmanager  initial-setup-graphical  reconfiguration-mode-enabled  run-gui-backend.guixorg  run-initial-setup
src/: a.rs  cfg.rs  macros.rs  main.rs  prelude.rs  ui.rs
src/backend/: dnf.rs  flatpak.rs  i18n.rs  l10n.rs  locale.rs  mod.rs  passwd.rs  settings.rs  steps.rs  theme.rs  tweaks.rs
src/backend/steps/: _00_devicename.rs  _00_hostname.rs  _00_useradd.rs  _01_settheme.rs  _01_settime.rs  _01_useradd.rs  _02_dnfdownloadupdate.rs  _02_setlocale.rs  _02_settheme.rs  _03_dnfdownloadupdate.rs  _03_dnfinstallupdate.rs  _03_dnfupdate.rs  _04_dnfinstall.rs  _04_dnfinstallupdate.rs  _04_script.rs  _05_dnfdownloadapps.rs  _05_script.rs  _06_dnfdownloadapps.rs  _06_dnfinstallapps.rs  _07_dnfinstallapps.rs  _07_drivers_codecs.rs  _08_drivers_codecs.rs  _08_setup_imf.rs  _09_setup_imf.rs
src/pages/: _00_language.rs  _00_welcome.rs  _01_keyboard.rs  _01_welcome.rs  _01_whoareyou.rs  _02_inputmethod.rs  _02_keyboard.rs  _02_password.rs  _02_whoareyou.rs  _03_analytics.rs  _03_computername.rs  _03_devicename.rs  _03_internet.rs  _03_nightlight.rs  _03_password.rs  _03_whoareyou.rs  _04_analytics.rs  _04_internet.rs  _04_password.rs  _04_theme.rs  _04_whoareyou.rs  _05_analytics.rs  _05_crashreport.rs  _05_installing.rs  _05_internet.rs  _06_analytics.rs  _06_crashreport.rs  _06_finish.rs  _06_internet.rs  _06_location.rs  _07_crashreport.rs  _07_error.rs  _07_location.rs  _07_nightlight.rs  _08_codecs.rs  _08_crashreport.rs  _08_inputmethod.rs  _08_location.rs  _08_theme.rs  _08_tweaks.rs  (+31 more)
taidan_catalogue_icons_puller/: Cargo.toml  main.rs
taidan_catalogue_parser/: Cargo.toml  err.rs  lib.rs  main.rs
taidan_proc_macros/: Cargo.toml  lang.rs  lib.rs
tdnx/: Cargo.toml  main.rs
