[package]
name = "libtaidan"
version = "0.3.0"
edition = "2024"
description = "Backend for Taidan (OOBE Application for Ultramarine Linux)"
license = "GPL-3.0-or-later"
repository = "https://github.com/Ultramarine-Linux/taidan"
readme = "../README.md"

[lib]
path = "./lib.rs"

[dependencies]
basic-toml = "0.1.10"
const_format = "0.2.36"
enum_dispatch = "0.3.13"
futures = { workspace = true }
itertools = { workspace = true }
memchr = "2.8.3"
paste = "1.0.15"
phf = { version = "0.14.0", features = ["macros", "phf_macros"] }
regex = { workspace = true }
reqwest = { version = "0.13.4", features = [
  "native-tls",
], default-features = false }
serde = { workspace = true }
serde_json = "1.0.151"
taidan_proc_macros = { path = "../taidan_proc_macros" }
tempfile = { workspace = true }
thiserror = "2.0.19"
tokio = { workspace = true }
tracing = { workspace = true }
uzers = "0.12.2"
xcrypt = "0.3.2"
